--- a/src/index.scss
+++ b/src/index.scss
@@ -5,14 +5,14 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; // 1rem === 10px
     box-sizing: border-box;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     color: #444;
-    background-color: #f3f3f3;
+    background-color: #d8d3d3;
     height: 100vh;
     padding: 2rem;
     margin: 0;
@@ -23,4 +23,8 @@ body {
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+#root {
+    height: 100%;
 }
