--- a/src/Account.scss
+++ b/src/Account.scss
@@ -16,6 +16,7 @@
      display: flex;
      justify-content: space-between;
      align-items: center;
+     padding: 1rem 5rem 0 5rem;
      &__label {
          font-size: 2.2rem;
          font-weight: 500;
@@ -32,31 +33,82 @@
  
  .accBody {
      display: flex;
-     padding: 4rem;
+     //  padding: 4rem;
      .mov {
          height: 30rem;
          flex: 0 0 60%;
          background-color: red;
      }
      .ops {
-         height: 30rem;
          flex: 0 0 40%;
          display: flex;
          flex-direction: column;
-         justify-content: space-between;
          padding: 4rem;
          color: #333;
-         background-color: rgb(235, 233, 222);
          .op {
-             height: 5rem;
+             &:not(:last-child) {
+                 margin-bottom: 3rem;
+             }
+             padding: 3rem 4rem;
+             color: #444;
+             border-radius: 2rem;
+             h2 {
+                 margin-bottom: 1.5rem;
+                 font-size: 1.7rem;
+                 font-weight: 600;
+                 color: #333;
+             }
+             .form {
+                 display: flex;
+                 flex-direction: column;
+                 .input-flex {
+                     display: flex;
+                     justify-content: space-between;
+                     align-items: center;
+                     margin-bottom: 1rem;
+                 }
+                 .label-flex {
+                     display: flex;
+                     align-items: center;
+                     position: relative;
+                     padding-left: 1rem;
+                     div {
+                         flex: 0 0 45%;
+                     }
+                 }
+                 &__btn {
+                     border: none;
+                     border-radius: .5rem;
+                     font-size: 1.8rem;
+                     width: 50%;
+                     cursor: pointer;
+                 }
+             }
+             .form__input {
+                 width: 100%;
+                 border: none;
+                 background-color: rgba(255, 255, 255, 0.4);
+                 font-family: inherit;
+                 font-size: 1.5rem;
+                 text-align: center;
+                 color: #333;
+                 padding: 0.3rem 1rem;
+                 border-radius: 0.7rem;
+                 transition: all 0.3s;
+                 margin-right: 2rem;
+                 &:focus {
+                     outline: none;
+                     background-color: rgba(255, 255, 255, 0.6)
+                 }
+             }
          }
          .op--lend {
-             background-image: linear-gradient(to top left, #39b385, #9be15d);
+             background-image: linear-gradient(to top left, #c8dad3, #595e56);
          }
          .op--borrow {
-             background-image: linear-gradient(to bottom left, #ffb003, #ffcb03);
+             background-image: linear-gradient(to bottom left, #c9e9a0, #10c06e);
          }
-         .op--close {
+         .op--block {
              background-image: linear-gradient(to bottom left, #e52a5a, #ff585f);
          }
      }
