--- a/src/Account.scss
+++ b/src/Account.scss
@@ -157,3 +157,27 @@
           }
       }
   }
+  
+  .summeries {
+      display: flex;
+      align-items: baseline;
+      width: 50%;
+      margin-left: 40%;
+      padding: 0 4rem;
+      &__label {
+          font-size: 1.2rem;
+          font-weight: 500;
+          text-transform: uppercase;
+          margin-right: 0.8rem;
+      }
+      &__value {
+          font-size: 2.2rem;
+          margin-right: 2.5rem;
+          &--in {
+              color: #66c873
+          }
+          &--out {
+              color: #f5465d;
+          }
+      }
+  }
