--- a/src/Account.scss
+++ b/src/Account.scss
@@ -1,183 +1,189 @@
-  .main {
-      position: relative;
-      margin: 5rem auto;
-      background-color: inherit;
-      // to pretend
-      max-width: 120rem;
-      display: flex;
-      flex-direction: column;
-      //to animation
-      opacity: 0;
-      transition: all 1s;
-  }
-  
-  .status {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 5rem 0 5rem;
-      &__label {
-          font-size: 2.2rem;
-          font-weight: 500;
-      }
-      &__date {
-          font-size: 1.4rem;
-          color: #777;
-      }
-      &__value {
-          font-size: 4rem;
-          font-weight: 400;
-      }
-  }
-  
-  .accBody {
-      display: flex;
-      padding: 4rem;
-      .mov {
-          display: flex;
-          flex-direction: column;
-          height: 50rem;
-          background-color: white;
-          flex: 0 0 60%;
-          padding: 1rem 2rem;
-          border-radius: 2rem;
-          overflow: scroll;
-          &__row {
-              padding: 2.2rem 4rem;
-              display: flex;
-              align-items: center;
-              justify-content: space-between;
-              border-bottom: 1px solid #eee;
-          }
-          &__type {
-              font-size: 1.1rem;
-              text-transform: uppercase;
-              font-weight: 500;
-              color: white;
-              padding: .2rem 1rem;
-              border-radius: 5rem;
-              &--dep {
-                  background-image: linear-gradient(to top left, #39b385, #9be15d);
-              }
-              &--withD {
-                  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
-                  margin-right: -1rem;
-              }
-          }
-          &__date {
-              font-size: 1.2rem;
-              text-transform: uppercase;
-              font-weight: 500;
-              color: #777;
-          }
-          &__message {
-              font-size: 1.2rem;
-              text-transform: uppercase;
-              font-weight: 500;
-              color: white;
-              padding: .5rem 1rem;
-              border-radius: 1rem;
-              background-image: linear-gradient(to top left, #756e70, #dbb3b5);
-          }
-          &__value {
-              font-size: 1.7rem;
-          }
-      }
-      .ops {
-          flex: 0 0 40%;
-          display: flex;
-          flex-direction: column;
-          color: #333;
-          padding-right: 2rem;
-          .op {
-              &:not(:last-child) {
-                  margin-bottom: 3.9rem;
-              }
-              padding: 3rem 4rem;
-              color: #444;
-              border-radius: 2rem;
-              h2 {
-                  margin-bottom: 1.5rem;
-                  font-size: 1.7rem;
-                  font-weight: 600;
-                  color: #333;
-              }
-              .form {
-                  display: flex;
-                  flex-direction: column;
-                  .input-flex {
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                      margin-bottom: 1rem;
-                  }
-                  .label-flex {
-                      display: flex;
-                      align-items: center;
-                      position: relative;
-                      padding-left: 1rem;
-                      div {
-                          flex: 0 0 45%;
-                      }
-                  }
-                  &__btn {
-                      border: none;
-                      border-radius: .5rem;
-                      font-size: 1.8rem;
-                      width: 50%;
-                      cursor: pointer;
-                  }
-              }
-              .form__input {
-                  width: 100%;
-                  border: none;
-                  background-color: rgba(255, 255, 255, 0.4);
-                  font-family: inherit;
-                  font-size: 1.5rem;
-                  text-align: center;
-                  color: #333;
-                  padding: 0.3rem 1rem;
-                  border-radius: 0.7rem;
-                  transition: all 0.3s;
-                  margin-right: 2rem;
-                  &:focus {
-                      outline: none;
-                      background-color: rgba(255, 255, 255, 0.6)
-                  }
-              }
-          }
-          .op--lend {
-              background-image: linear-gradient(to bottom right, #c8dad3, #595e56);
-          }
-          .op--borrow {
-              background-image: linear-gradient(to bottom left, #c9e9a0, #10c06e);
-          }
-          .op--block {
-              background-image: linear-gradient(to bottom left, #e52a5a, #ff585f);
-          }
-      }
-  }
-  
-  .summeries {
-      display: flex;
-      align-items: baseline;
-      width: 50%;
-      margin-left: 40%;
-      padding: 0 4rem;
-      &__label {
-          font-size: 1.2rem;
-          font-weight: 500;
-          text-transform: uppercase;
-          margin-right: 0.8rem;
-      }
-      &__value {
-          font-size: 2.2rem;
-          margin-right: 2.5rem;
-          &--in {
-              color: #66c873
-          }
-          &--out {
-              color: #f5465d;
-          }
-      }
-  }
+@import './variables.scss';
+.main {
+    position: relative;
+    margin: 5rem auto;
+    background-color: inherit;
+    // to pretend
+    max-width: 120rem;
+    display: flex;
+    flex-direction: column;
+    //to animation
+    opacity: 0;
+    transition: all 1s;
+}
+
+.status {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 5rem 0 5rem;
+    &__label {
+        font-size: 2.2rem;
+        font-weight: 500;
+    }
+    &__date {
+        font-size: 1.4rem;
+        color: #777;
+    }
+    &__value {
+        font-size: 4rem;
+        font-weight: 400;
+    }
+    &__message {
+        font-size: 2.2rem;
+        font-weight: 400;
+        border: 1px solid $color-grey-dark-3;
+    }
+}
+
+.accBody {
+    display: flex;
+    padding: 4rem;
+    .mov {
+        display: flex;
+        flex-direction: column;
+        height: 50rem;
+        background-color: white;
+        flex: 0 0 60%;
+        padding: 1rem 2rem;
+        border-radius: 2rem;
+        overflow: scroll;
+        &__row {
+            padding: 2.2rem 4rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid #eee;
+        }
+        &__type {
+            font-size: 1.1rem;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: white;
+            padding: .2rem 1rem;
+            border-radius: 5rem;
+            &--dep {
+                background-image: linear-gradient(to top left, #39b385, #9be15d);
+            }
+            &--withD {
+                background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+                margin-right: -1rem;
+            }
+        }
+        &__date {
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: #777;
+        }
+        &__message {
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: white;
+            padding: .5rem 1rem;
+            border-radius: 1rem;
+            background-image: linear-gradient(to top left, #756e70, #dbb3b5);
+        }
+        &__value {
+            font-size: 1.7rem;
+        }
+    }
+    .ops {
+        flex: 0 0 40%;
+        display: flex;
+        flex-direction: column;
+        color: #333;
+        padding-right: 2rem;
+        .op {
+            &:not(:last-child) {
+                margin-bottom: 3.9rem;
+            }
+            padding: 3rem 4rem;
+            color: #444;
+            border-radius: 2rem;
+            h2 {
+                margin-bottom: 1.5rem;
+                font-size: 1.7rem;
+                font-weight: 600;
+                color: #333;
+            }
+            .form {
+                display: flex;
+                flex-direction: column;
+                .input-flex {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin-bottom: 1rem;
+                }
+                .label-flex {
+                    display: flex;
+                    align-items: center;
+                    position: relative;
+                    padding-left: 1rem;
+                    div {
+                        flex: 0 0 45%;
+                    }
+                }
+                &__btn {
+                    border: none;
+                    border-radius: .5rem;
+                    font-size: 1.8rem;
+                    width: 50%;
+                    cursor: pointer;
+                }
+            }
+            .form__input {
+                width: 100%;
+                border: none;
+                background-color: rgba(255, 255, 255, 0.4);
+                font-family: inherit;
+                font-size: 1.5rem;
+                text-align: center;
+                color: #333;
+                padding: 0.3rem 1rem;
+                border-radius: 0.7rem;
+                transition: all 0.3s;
+                margin-right: 2rem;
+                &:focus {
+                    outline: none;
+                    background-color: rgba(255, 255, 255, 0.6)
+                }
+            }
+        }
+        .op--lend {
+            background-image: linear-gradient(to bottom right, #c8dad3, #595e56);
+        }
+        .op--borrow {
+            background-image: linear-gradient(to bottom left, #c9e9a0, #10c06e);
+        }
+        .op--block {
+            background-image: linear-gradient(to bottom left, #e52a5a, #ff585f);
+        }
+    }
+}
+
+.summeries {
+    display: flex;
+    align-items: baseline;
+    width: 50%;
+    margin-left: 40%;
+    padding: 0 4rem;
+    &__label {
+        font-size: 1.2rem;
+        font-weight: 500;
+        text-transform: uppercase;
+        margin-right: 0.8rem;
+    }
+    &__value {
+        font-size: 2.2rem;
+        margin-right: 2.5rem;
+        &--in {
+            color: #66c873
+        }
+        &--out {
+            color: #f5465d;
+        }
+    }
+}
