BlockFunction message funcionality

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -15,3 +15,6 @@ $color-white: #fff;
 $color-black: #000;
 // FONT
 $default-font-size: 1.6rem;
+////////////////////////////
+$shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+$shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
