--- a/src/Account.scss
+++ b/src/Account.scss
@@ -30,9 +30,15 @@
         font-weight: 400;
     }
     &__message {
-        font-size: 2.2rem;
+        font-family: inherit;
+        color: inherit;
+        font-size: 1.6rem;
         font-weight: 400;
-        border: 1px solid $color-grey-dark-3;
+        border: 1px solid #fff;
+        padding: .5rem 1rem;
+        border-radius: .5rem;
+        background-color: #eee;
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, .2);
     }
 }
 
