--- a/src/Account.scss
+++ b/src/Account.scss
@@ -69,6 +69,7 @@
                     justify-content: space-between;
                     align-items: center;
                     margin-bottom: 1rem;
+                    // width: min-content;
                 }
                 .label-flex {
                     display: flex;
