--- a/src/Movements.scss
+++ b/src/Movements.scss
@@ -75,7 +75,7 @@
         color: white;
         padding: .5rem 1rem;
         border-radius: 1rem;
-        background-image: linear-gradient(to right, #82d2e6, #3e5c75);
+        background-image: linear-gradient(to right, #82d2e6, #62a5d8, #4678b3, #82d2e6);
     }
     &__value {
         font-size: 1.7rem;
