--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
+@import '~normalize.css';
 * {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 html {
@@ -14,6 +15,7 @@ body {
     color: #444;
     background-color: #d8d3d3;
     height: 100vh;
+    width: 100%;
     padding: 2rem;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -27,4 +29,5 @@ code {
 
 #root {
     height: 100%;
+    width: 100%;
 }
