--- a/src/Account.scss
+++ b/src/Account.scss
@@ -86,6 +86,7 @@
                 }
                 &__btn {
                     border: none;
+                    outline: none;
                     border-radius: .5rem;
                     font-size: 1.8rem;
                     width: 50%;
