HandleUploadMoney function Stage 1

--- a/src/Account.scss
+++ b/src/Account.scss
@@ -94,6 +94,9 @@
         .op--borrow {
             background-image: linear-gradient(to bottom left, #c1eb8b, #13a561);
         }
+        .op--upload {
+            background-image: linear-gradient(to bottom left, #17bde6da, #2464f0);
+        }
         .op--block {
             background-image: linear-gradient(to bottom right, #ec4a73, #860711);
         }
