--- a/src/Account.scss
+++ b/src/Account.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './Login.scss';
 .main {
     position: relative;
     margin: 5rem auto;
@@ -6,7 +7,7 @@
     display: flex;
     flex-direction: column;
     opacity: 0;
-    transition: all 1s;
+    transition: all 1.3s;
 }
 
 .accBody {
