--- a/src/TopNav.scss
+++ b/src/TopNav.scss
@@ -64,6 +64,6 @@ nav {
     &:focus {
         outline: none;
         color: black;
-        border: 1px solid #ccc;
+        // border: 1px solid #ccc;
     }
 }
