Creating Animation with CSSTransition

--- a/src/Account.scss
+++ b/src/Account.scss
@@ -6,8 +6,8 @@
     max-width: 120rem;
     display: flex;
     flex-direction: column;
-    opacity: 0;
-    transition: all 1.3s;
+    // opacity: 0;
+    // transition: all 1.3s;
 }
 
 .accBody {
