--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,33 @@
     overflow: hidden;
     position: relative;
 }
+
+// .login-transition-enter {
+//     opacity: 0;
+//     z-index: 1;
+//     transform: translateX(-1000px);
+// }
+.login-transition-enter,
+.login-transition-appear {
+    opacity: 0;
+    z-index: 1;
+    transform: translateX(0px);
+}
+
+.login-transition-appear-active,
+.login-transition-enter-active.login-transition-enter {
+    opacity: 1;
+    transition: opacity 400ms, linear 150ms;
+    transform: translateX(0px);
+}
+
+.login-transition-exit {
+    opacity: 1;
+    transform: translateX(0px);
+}
+
+.login-transition-exit.login-transition-exit-active {
+    opacity: 0;
+    transition: opacity 4000ms linear 1500ms;
+    transform: translateX(-1000px);
+}
