Fixin some issues on Ops(css)

--- a/src/Movements.scss
+++ b/src/Movements.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     height: 56rem;
     background-color: white;
-    flex: 0 0 60%;
+    // flex: 0 0 60%;
+    width: 100%;
     padding: 1rem 2rem;
     border-radius: 2rem;
     overflow: scroll;
