--- a/src/Account.scss
+++ b/src/Account.scss
@@ -15,8 +15,6 @@
     padding: 4rem;
     .ops {
         flex: 0 0 40%;
-        display: flex;
-        flex-direction: column;
         color: #333;
         padding-right: 2rem;
         .op {
@@ -37,12 +35,13 @@
             .form {
                 display: flex;
                 flex-direction: column;
+                width: 100%;
                 .input-flex {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
                     margin-bottom: 1rem;
-                    // width: min-content;
+                    // width: max-content;
                 }
                 .label-flex {
                     display: flex;
@@ -58,7 +57,7 @@
                     outline: none;
                     border-radius: .5rem;
                     font-size: 1.8rem;
-                    width: 50%;
+                    width: 30%;
                     cursor: pointer;
                     // &--repayment {
                     //     padding: .3rem 1rem;
@@ -70,6 +69,7 @@
             }
             .form__input {
                 border: none;
+                width: 50%;
                 background-color: rgba(255, 255, 255, 0.4);
                 font-family: inherit;
                 font-size: 1.5rem;
@@ -86,6 +86,7 @@
                 &--message {
                     margin-top: 1rem;
                     margin-bottom: 1rem;
+                    width: 100%;
                 }
             }
         }
