--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ html {
 body {
     font-family: 'Poppins', sans-serif;
     color: #444;
-    background-color: #d8d3d3;
+    background-color: #c7c9ce;
     height: 100vh;
     width: 100%;
     padding: 2rem;
