--- a/src/Account.scss
+++ b/src/Account.scss
@@ -2,30 +2,40 @@
 @import './Login.scss';
 .main {
     position: relative;
-    margin: 5rem auto;
+    margin: 0rem auto;
     max-width: 120rem;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
     // opacity: 0;
     // transition: all 1.3s;
+    display: grid;
+    grid-template-columns: 4fr 3fr;
+    grid-template-rows: auto repeat(3, 15rem) auto;
+    gap: 2rem;
 }
 
 .accBody {
     display: flex;
-    padding: 4rem;
+    // padding: 4rem;
+    grid-column: 1/3;
+    grid-row: 2/6;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 2rem;
     .ops {
-        flex: 0 0 40%;
         color: #333;
-        padding-right: 2rem;
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 2rem;
         .op {
-            &:not(:last-child) {
-                margin-bottom: 1.9rem;
-            }
             padding: 3rem 4rem;
             color: #444;
             color: white;
             font-weight: 500;
-            border-radius: 2rem;
+            border-radius: 1rem;
             h2 {
                 margin-bottom: 1.5rem;
                 font-size: 1.7rem;
@@ -55,7 +65,7 @@
                 &__btn {
                     border: none;
                     outline: none;
-                    border-radius: .5rem;
+                    border-radius: 0.5rem;
                     font-size: 1.8rem;
                     width: 30%;
                     cursor: pointer;
@@ -81,7 +91,7 @@
                 margin-right: 2rem;
                 &:focus {
                     outline: none;
-                    background-color: rgba(255, 255, 255, 0.6)
+                    background-color: rgba(255, 255, 255, 0.6);
                 }
                 &--message {
                     margin-top: 1rem;
@@ -91,7 +101,7 @@
             }
         }
         .op--lend {
-            background-image: linear-gradient(to bottom right, #c8dad3, #595e56, #99a5a0);
+            background-image: linear-gradient( to bottom right, #c8dad3, #595e56, #99a5a0);
         }
         .op--borrow {
             background-image: linear-gradient(to bottom left, #c1eb8b, #13a561);
@@ -109,9 +119,11 @@
     display: flex;
     align-items: baseline;
     justify-content: space-around;
-    width: 55%;
-    margin-left: 40%;
+    background-color: #fff;
+    border-radius: 1rem;
     padding: 0 4rem;
+    grid-column: 4/-1;
+    grid-row: 2/3;
     &__label {
         font-size: 1.2rem;
         font-weight: 500;
@@ -122,7 +134,7 @@
         font-size: 2.2rem;
         margin-right: 2.5rem;
         &--in {
-            color: #66c873
+            color: #66c873;
         }
         &--out {
             color: #f5465d;
