--- a/src/Status.scss
+++ b/src/Status.scss
@@ -1,32 +1,76 @@
 .status {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 5rem 0 5rem;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    max-width: 120rem;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 2rem;
+    // padding: 1rem 4rem 0 4rem;
+    grid-column: 1/3;
+    &__current-container {
+        background-color: white;
+        padding: 2rem 4rem;
+        grid-column: 1/4;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        border-radius: 1rem;
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+    }
     &__label {
         font-size: 2.2rem;
         font-weight: 500;
+        &--value {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            justify-self: end;
+            font-size: 1.6rem;
+            font-weight: 400;
+            color: #777;
+        }
+    }
+    &__accNum {
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: #777;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        align-self: start;
+        &--arr {
+            color: #058473;
+        }
     }
     &__date {
         font-size: 1.4rem;
         color: #777;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        align-self: end;
     }
     &__value {
         font-size: 4rem;
         font-weight: 400;
+        grid-column: 2 / 3;
+        grid-row: 2/3;
+        justify-self: end;
+        &--euro {
+            margin-left: 1rem;
+            color: #777;
+        }
     }
     &__message {
-        height: 100%;
-        width: 30vw;
+        grid-column: 4/-1;
+        grid-row: 1/2;
         font-family: inherit;
         color: inherit;
         font-size: 1.6rem;
         font-weight: 400;
         border: 1px solid #fff;
-        padding: .5rem 1rem;
-        border-radius: .5rem;
-        background-color: #eee;
-        box-shadow: 0 1rem 4rem rgba(0, 0, 0, .2);
+        padding: 0.5rem 1rem;
+        border-radius: 1rem;
+        background-color: #fff;
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
     }
 }
 
