--- a/src/Account.scss
+++ b/src/Account.scss
@@ -22,6 +22,7 @@
     grid-row: 2/6;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr minmax(350px, min-content) 1fr;
     grid-gap: 2rem;
     .ops {
         color: #333;
@@ -31,11 +32,14 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 2rem;
         .op {
-            padding: 3rem 4rem;
-            color: #444;
+            padding: 1rem 2rem;
             color: white;
             font-weight: 500;
             border-radius: 1rem;
+            box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+            // &:not(:first-child) {
+            //     margin-left: -10rem;
+            // }
             h2 {
                 margin-bottom: 1.5rem;
                 font-size: 1.7rem;
@@ -101,29 +105,66 @@
             }
         }
         .op--lend {
-            background-image: linear-gradient( to bottom right, #c8dad3, #595e56, #99a5a0);
+            // background-image: linear-gradient( to bottom right, #c8dad3, #595e56, #99a5a0);
+            background-image: linear-gradient(to top right, #ff4e50, #f9d423);
         }
         .op--borrow {
             background-image: linear-gradient(to bottom left, #c1eb8b, #13a561);
         }
         .op--upload {
-            background-image: linear-gradient(to bottom left, #17bde6da, #2464f0);
+            // background-image: linear-gradient(to bottom left, #17bde6da, #2464f0);
+            background-image: linear-gradient(to bottom right, #00c6ff, #0072ff);
         }
         .op--repayment {
-            background-image: linear-gradient(to bottom right, #16db37, #abcab2);
+            background-image: linear-gradient(to bottom right, #34e89e, #0f3443);
         }
     }
 }
 
 .summeries {
     display: flex;
-    align-items: baseline;
-    justify-content: space-around;
+    flex-direction: column;
     background-color: #fff;
     border-radius: 1rem;
-    padding: 0 4rem;
+    height: 40vh;
+    padding: 1rem 2rem;
     grid-column: 4/-1;
     grid-row: 2/3;
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+    &__header {
+        color: #444;
+        font-weight: 600;
+        padding: 1rem;
+        // background-color: #e52a5a;
+        font-size: 2rem;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        button {
+            background-image: linear-gradient(to left, #0f884f, #34e89e);
+            padding: 3px 9px;
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+        }
+    }
+    &__body {
+        display: grid;
+        // grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        .labels {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            margin-bottom: 1rem;
+            border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+            padding: 1rem;
+        }
+        .values {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            padding: 1rem;
+        }
+    }
     &__label {
         font-size: 1.2rem;
         font-weight: 500;
@@ -132,7 +173,6 @@
     }
     &__value {
         font-size: 2.2rem;
-        margin-right: 2.5rem;
         &--in {
             color: #66c873;
         }
@@ -141,7 +181,10 @@
         }
     }
     .timer {
-        font-size: 1.6rem;
-        // margin-left: auto;
+        font-size: 2.2rem;
     }
+}
+
+.react-calendar__tile--now {
+    background-image: linear-gradient( to bottom right, #00c6ff, #0072ff) !important;
 }
