--- a/src/Movements.scss
+++ b/src/Movements.scss
@@ -9,8 +9,25 @@
     box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
     overflow: scroll;
     grid-column: 1/4;
+    &__headline {
+        color: #444;
+        font-weight: 600;
+        padding: 1rem;
+        // background-color: #e52a5a;
+        font-size: 2rem;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        button {
+            background-image: linear-gradient(to left, #0f884f, #34e89e);
+            padding: 3px 9px;
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+        }
+    }
     &__row {
-        padding: 2.2rem 4rem;
+        padding: 0.8rem 1.6rem;
         // display: flex;
         // align-items: center;
         // justify-content: space-between;
@@ -27,25 +44,40 @@
         // }
         // &--withD {
         //     // border: 1px solid #e52a5a;
-        //     background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+        //     background-image: linear-gradient(to left, #eef2f3, #8e9eab, #eef2f3);
+        //     border-radius: 2rem;
         // }
     }
     &__type {
         font-size: 1.1rem;
-        text-transform: uppercase;
+        text-transform: lowercase;
         font-weight: 500;
         color: white;
-        padding: 0.2rem 1rem;
-        border-radius: 5rem;
+        padding: 0.2rem 0.6rem;
+        border-radius: 3px;
         align-self: center;
         justify-self: start;
         &--dep {
             background-image: linear-gradient(to top left, #39b385, #9be15d);
+            background-image: linear-gradient(to right, #269762, #0caf63);
         }
         &--withD {
             background-image: linear-gradient(to top left, #e52a5a, #ff585f);
             margin-right: -1rem;
         }
+    }
+    &__message {
+        grid-row: 2 / 3;
+        grid-column: 1 / -1;
+        font-size: 1.2rem;
+        width: max-content;
+        text-transform: lowercase;
+        font-weight: 500;
+        color: white;
+        padding: 0.2rem 0.6rem;
+        border-radius: 3px;
+        // background-image: linear-gradient( to right, #82d2e6, #62a5d8, #4678b3, #82d2e6);
+        background-image: linear-gradient(to bottom right, #00c6ff, #0072ff);
     }
     &__transactionTyp {
         align-self: center;
@@ -66,18 +98,6 @@
         color: #777;
         align-self: center;
         justify-self: center;
-    }
-    &__message {
-        grid-row: 2 / 3;
-        grid-column: 1 / -1;
-        font-size: 1.2rem;
-        width: max-content;
-        text-transform: uppercase;
-        font-weight: 500;
-        color: white;
-        padding: 0.5rem 1rem;
-        border-radius: 1rem;
-        background-image: linear-gradient( to right, #82d2e6, #62a5d8, #4678b3, #82d2e6);
     }
     &__value {
         font-size: 1.7rem;
