--- a/src/TopNav.scss
+++ b/src/TopNav.scss
@@ -45,31 +45,31 @@ nav {
 }
 
 .loginForm__btn {
-    width: 13rem;
-    display: flex;
+    width: 5rem;
     justify-content: center;
     align-self: center;
-    font-size: 1.6rem;
-    font-family: inherit;
     border: none;
-    padding: 0.5rem 2rem;
-    border-radius: 5rem;
-    background-color: #ced1d8;
+    padding: 1rem 2rem;
+    border-radius: 10rem;
+    background-color: transparent;
     cursor: pointer;
-    color: rgb(70, 66, 66);
+    color: #2f976c;
+    font-size: 3rem;
     transition: all 0.5s;
+    display: grid;
     @include respond(tab-port) {
         font-size: 1.4rem; // 1rem == 8px 8/16 = 50%
     }
     span {
-        margin-left: 0.5rem;
+        display: grid;
         transition: all 0.5s;
     }
     &:hover,
     &:focus {
+        transform: translateY(-1px);
+        box-shadow: 4px 0px 3px 2px rgba(0, 0, 0, 0.2);
         outline: none;
-        background-color: white;
-        color: rgb(107, 101, 101);
+        color: rgb(192, 42, 42);
         // border: 1px solid #ccc;
     }
 }
