--- a/src/TopNav.scss
+++ b/src/TopNav.scss
@@ -57,6 +57,7 @@ nav {
     font-size: 3rem;
     transition: all 0.5s;
     display: grid;
+    border: 1px solid rgba(0, 0, 0, 0.08);
     @include respond(tab-port) {
         font-size: 1.4rem; // 1rem == 8px 8/16 = 50%
     }
