--- a/src/Status.scss
+++ b/src/Status.scss
@@ -1,3 +1,4 @@
+@import './mixins.scss';
 @mixin basicCardStyle {
     background: white;
     border-radius: 0.5rem;
@@ -13,6 +14,15 @@
         transform: translateY(-0.5rem);
         // z-index: 2;
     }
+    @include respond(tab-land) {
+        width: 6vw;
+    }
+    @include respond(tab-land) {
+        width: 9vw;
+    }
+    @include respond(phone-mini) {
+        width: 13vw;
+    }
 }
 
 .status {
@@ -22,9 +32,11 @@
     max-width: 120rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-column-gap: 2rem;
-    // padding: 1rem 4rem 0 4rem;
+    grid-gap: 2rem;
     grid-column: 1/3;
+    @include respond(phone-mini) {
+        grid-template-rows: repeat(2, 1fr);
+    }
     &__current-container {
         background-color: white;
         padding: 2rem 4rem;
@@ -34,17 +46,35 @@
         grid-template-rows: 1fr 1fr;
         border-radius: 1rem;
         box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
+        @include respond(phone) {
+            padding: 1rem 2rem;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        @include respond(phone-mini) {
+            grid-column: 1/-1;
+            grid-row: 1/2;
+        }
     }
-    &__label {
+    &__name {
         font-size: 2.2rem;
         font-weight: 500;
-        &--value {
-            grid-column: 2/3;
-            grid-row: 1/2;
-            justify-self: end;
+        @include respond(phone) {
+            grid-column: 1/3;
+        }
+    }
+    &__label {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        justify-self: end;
+        font-size: 1.6rem;
+        font-weight: 400;
+        color: #777;
+        @include respond(phone) {
+            grid-column: 3/4;
+            font-size: 1.4rem;
+        }
+        @include respond(phone-mini) {
             font-size: 1.6rem;
-            font-weight: 400;
-            color: #777;
         }
     }
     &__accNum {
@@ -54,6 +84,10 @@
         grid-column: 1/2;
         grid-row: 2/3;
         align-self: start;
+        @include respond(phone) {
+            grid-column: 1/3;
+            font-size: 1.2rem;
+        }
         &--arr {
             color: #058473;
         }
@@ -71,6 +105,10 @@
         grid-column: 2 / 3;
         grid-row: 2/3;
         justify-self: end;
+        @include respond(phone) {
+            font-size: 3rem;
+            grid-column: 3/ 4;
+        }
         &--euro {
             margin-left: 1rem;
             color: #777;
@@ -91,12 +129,22 @@
         box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.2);
         // developig cards
         display: grid;
+        // @include respond(phone) {
+        //     grid-column: 5/7;
+        // }
+        @include respond(phone-mini) {
+            grid-column: 1/-1;
+            grid-row: 2/3;
+        }
         &--label {
             height: fit-content;
             font-size: 2.2rem;
             font-weight: 500;
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
             margin-bottom: 0.5rem;
+            @include respond(phone) {
+                font-size: 1.8rem;
+            }
         }
         .cards {
             display: flex;
