Making LoginPage responsive + cleaning

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import './mixins.scss';
 .animation {
     overflow: hidden;
     position: relative;
@@ -35,4 +36,7 @@
     min-height: 96vh;
     overflow: hidden;
     padding: 1rem;
+    @include respond(phone-mini) {
+        padding: 0;
+    }
 }
