--- a/src/TopNav.scss
+++ b/src/TopNav.scss
@@ -4,6 +4,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 2rem 4rem 0rem 4rem;
+    margin-bottom: 1rem;
 }
 
 .welcome {
